<resources>
    <string name="app_name">Etbakhly</string>
    <string name="field_req">Field Required</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="banquet_and_events_services">Banquet and events services</string>
    <string name="demand_from_independent_chefs">Demand from independent chefs</string>
    <string name="order_food_carts_to_reach_you">Order food carts to reach you</string>
    <string name="select_the_address">Select The Address</string>
    <string name="confirm">confirm</string>
    <string name="map_key" />
    <string name="no_data_to_show">No Data To Show</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="select_order">Select your order</string>
    <string name="select_order_content">Select your order if you want to book a buffet or order from an independent chef or from a food cart</string>
    <string name="choose_food">Choose your food from the menu online</string>
    <string name="choose_kitchen">Choose the right kitchen for your occasion, whether it is a restaurant, independent chefs or mobile carts</string>
    <string name="select_address">Select your address to receive your ord</string>
    <string name="choose_right_kitchen">Choose the right kitchen for your occasion, whether it is a restaurant, independent chefs or mobile carts</string>
    <string name="the_order">The Order</string>
    <string name="do_you_have_a_coupon">Do you have a coupon?</string>
    <string name="enter_the_coupon_here">Enter the coupon here</string>
    <string name="total">Total</string>
    <string name="tax">Tax</string>
    <string name="drive">Drive</string>
    <string name="total_summation">Total Summation</string>
    <string name="complete_operation">Complete Operation</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="connecting">Connecting</string>
    <string name="the_most_famous_chef_in_your_area">The most famous chef in your area</string>
    <string name="categories">Categories</string>
    <string name="near_to_you">Near To You</string>
    <string name="special_dishes">Special Dishes</string>
    <string name="current_orders">Current Orders</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="order_num">Order Num :</string>
    <string name="return_order">Return Order</string>
    <string name="rate">Rate</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="the_most_wanted">The Most Wanted</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="menu">Menu</string>
    <string name="r_s">R.S</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="recommendations">Recommendations</string>
    <string name="high_rate">High Rate</string>
    <string name="near">Near</string>
    <string name="done">Done</string>
    =
    <string name="rate2">Rate</string>
    <string name="delivery_method">Delivery method</string>
    <string name="delivery">Delivery</string>
    <string name="did_not_matter">Did not matter</string>
    <string name="delivery_time">Delivery time</string>
    <string name="delivery_from_8_am_to_4_pm">Delivery from 8 am to 4 pm</string>
    <string name="delivery_from_4_pm_to_10_pm">Delivery from 4 pm to 10 pm</string>
    <string name="delivery_from_10_pm_to_8_am">Delivery from 10 pm to 8 am</string>
    <string name="apply_on">Apply On</string>
    <string name="most_famous_in_your_area">Most Famous In Your Area</string>
    <string name="special_kitchen">Special Kitchen</string>
    <string name="kitchens_provide_free_delivery">Kitchens provide free delivery</string>
    <string name="galarys">Galary</string>
    <string name="services">Services</string>
    <string name="buffet_reservation_service">Buffet Reservation Service</string>
    <string name="we_offer_buffets_for_all_private_and_public_occasions">We offer buffets for all private and public occasions</string>
    <string name="banquet_booking_service">Banquet Booking Service</string>
    <string name="processing_time">processing Time</string>
    <string name="service_delivery">Service Delivery</string>
    <string name="buffet_list">Buffet List</string>
    <string name="pepople_num">Pepople Num : </string>
    <string name="food_menu">Food Menu</string>
    <string name="amount">Amount :</string>
    <string name="most_famous_car">Most Famous Car</string>
    <string name="near_car">Near Car</string>
    <string name="setup_requirements">Setup Requirements</string>
    <string name="package_is_ready">Package is ready</string>
    <string name="choose_dishes">Choose Dishes</string>
    <string name="we_offer_you_a_food_cart_for_all_private_and_public_occasions">We offer you a food cart for all private and public occasions</string>
    <string name="Soon">Soon</string>
    <string name="please_enter_the_verification_code_sent_to">Enter the 4-digit code sent to the number</string>
    <string name="resend">Resend Code</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">Phone Found</string>

</resources>