<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="lang"
            type="String"

            />


    </data>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray7"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray7"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="false"
            android:longClickable="false"
            android:padding="10dp"
            android:text="@string/the_order"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llCart1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="3dp"

            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/banquet_and_events_services"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>

            <ImageView
                android:id="@+id/arrow1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:longClickable="false"
                android:padding="3dp"
                android:src="@drawable/ic_left_arrow"
                app:tint="@color/black" />
        </LinearLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/elexpendcart1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:el_duration="1000"
            app:el_expanded="false">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
          >

            <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/recviewCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:visibility="gone"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_to_show"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

        </FrameLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>
        <LinearLayout
            android:id="@+id/llCart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="3dp"

            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/demand_from_independent_chefs"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>

            <ImageView
                android:id="@+id/arrow2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:longClickable="false"
                android:padding="3dp"
                android:src="@drawable/ic_left_arrow"
                app:tint="@color/black" />
        </LinearLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/elexpendcart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:el_duration="1000"
            app:el_expanded="false">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recviewCart2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_data_to_show"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:visibility="gone" />

            </FrameLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>
        <LinearLayout
            android:id="@+id/llCart3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="3dp"

            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/order_food_carts_to_reach_you"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>

            <ImageView
                android:id="@+id/arrow3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:longClickable="false"
                android:padding="3dp"
                android:src="@drawable/ic_left_arrow"
                app:tint="@color/black" />
        </LinearLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/elexpendcart3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:el_duration="1000"
            app:el_expanded="false">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recviewCart3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_data_to_show"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:visibility="gone" />

            </FrameLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="10dp"
                    android:text="@string/do_you_have_a_coupon"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
          <FrameLayout
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:layout_gravity="center"
              android:layout_marginEnd="10dp"
             android:background="@drawable/rounded_empty_stroke"
              android:layout_weight="1">
              <EditText
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginStart="5dp"
                  android:layout_marginEnd="5dp"
                  android:background="@color/transparent"
                  android:gravity="center_vertical"
                  android:hint="@string/enter_the_coupon_here"
                  android:paddingLeft="5dp"
                  android:paddingRight="5dp"
                  android:textColor="@color/black"
                  android:textColorHint="@color/gray22"
                  android:textSize="14sp"
                  tools:ignore="TextFields" />
          </FrameLayout>
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/color1"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="10dp"
                android:text="@string/total"
                android:textColor="@color/gray24"
                android:textSize="15sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="10dp"
                android:text="300"
                android:textColor="@color/gray24"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/color1"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="10dp"
                android:text="@string/tax"
                android:textColor="@color/gray24"
                android:textSize="15sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="10dp"
                android:text="3"
                android:textColor="@color/gray24"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/color1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="10dp"
                android:text="@string/drive"
                android:textColor="@color/gray24"
                android:textSize="15sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="10dp"
                android:text="2"
                android:textColor="@color/gray24"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="10dp"
                    android:text="@string/total_summation"
                    android:textColor="@color/gray24"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="10dp"
                    android:text="400"
                    android:textColor="@color/gray24"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_primary"

            android:text="@string/complete_operation"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>






</layout>